# general-hotstuff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.rst  bls_sample  hotstuff-client  python3  quorums.json
conf/: dimensions.json  quorums.json  replicas.txt  replicas_exter.txt  replicas_inter.txt
examples/: CMakeLists.txt
miracl_core/: arch.h  benchtest_all  big_B160_56.h  big_B168_60.h  big_B256_56.h  big_B288_60.h  big_B336_60.h  big_B384_56.h  big_B384_58.h  big_B416_60.h  big_B448_58.h  big_B448_60.h  big_B464_60.h  big_B480_56.h  big_B512_60.h  big_B528_60.h  big_B560_58.h  big_B584_60.h  bls256_BLS48286.h  bls256_BLS48581.h  bls_BLS12443.h  bls_BLS12461.h  bls_BN254CX.h  bls_BN462.h  bls_FP256BN.h  bls_FP512BN.h  config_big_B160_56.h  config_big_B168_60.h  config_big_B288_60.h  config_big_B336_60.h  config_big_B416_60.h  config_big_B448_60.h  config_big_B464_60.h  config_big_B512_60.h  config_big_B528_60.h  config_big_B584_60.h  config_curve_ANSSI.h  config_curve_BLS12443.h  config_curve_BLS12461.h  config_curve_BLS48286.h  (+255 more)
plots/: msp_GEN_KGRID_100  msp_GEN_KGRID_16  msp_GEN_KGRID_36  msp_GEN_KGRID_4  msp_GEN_KGRID_64  msp_GEN_MAJ_100  msp_GEN_MAJ_16  msp_GEN_MAJ_36  msp_GEN_MAJ_4  msp_GEN_MAJ_64  msp_GEN_UNBAL_100  msp_GEN_UNBAL_16  (+3 more)
test/: CMakeLists.txt  algebra_utils.h  microbench.cpp  microbench_auth.cpp  microbench_bls.cpp  microbench_bls.txt  microbench_coin.cpp  microbench_pairings  microbench_pairings.cpp  microbench_pairings.txt  microbench_pairings_miracl.txt  microbench_vss.cpp  miralc-test-ecc-test-output.txt  test_quorums.cpp
(+436 files in other folders)
